my-apps/development/jenkins/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  labels:
    volsync.backube/privileged-movers: "true"
